# rubber-duck

./: CMakeLists.txt  README.md  nginx_config
configs/: development.conf  production.conf
conftst/: rubber-duck.conf
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: config_parser.h  reply.h  request.h  server.h  session.h
include/http/: header.h  method_type.h  mime_types.h  response.h  status_code.h
include/http/request/: request.h  request_parser.h
include/http/request_handler/: echo_request_handler.h  not_found_request_handler.h  request_handler.h  request_handler_factory.h  static_request_handler.h  status_request_handler.h
include/http/server/: echo_request_handler.h  header.h  mime_types.h  reply.h  request.h  request_handler.h  request_handler_factory.h  request_parser.h  response.h  server.h  session.h  session_manager.h  static_request_handler.h
include/http/server/request_handler/: echo_request_handler.h  not_found_request_handler.h  request_handler.h  request_handler_factory.h  static_request_handler.h  status_request_handler.h
include/http/session/: session.h  session_manager.h
include/logging/: logging.h  logs.h
include/nginx/: config.h  config_parser.h  config_statement.h  location.h
include/utils/: reply.h  request.h
public/public1/: home.html  index.html  text.txt
public/public2/: file.foo
src/: config_parser.cc  reply.cc  request_parser.cc  server.cc  server_main.cc  session.cc
src/http/: header.cc  method_type.cc  mime_types.cc  response.cc
src/http/request/: request.cc  request_parser.cc
src/http/request_handler/: echo_request_handler.cc  not_found_request_handler.cc  request_handler_factory.cc  static_request_handler.cc  status_request_handler.cc
src/http/server/: echo_request_handler.cc  header.cc  mime_types.cc  reply.cc  request.cc  request_handler.cc  request_handler_factory.cc  request_parser.cc  response.cc  server.cc  server_main.cc  session.cc  session_manager.cc  static_request_handler.cc
src/http/server/request_handler/: echo_request_handler.cc  not_found_request_handler.cc  request_handler.cc  request_handler_factory.cc  static_request_handler.cc  status_request_handler.cc
src/http/session/: session.cc  session_manager.cc
src/logging/: logging.cc  logs.cc
src/nginx/: config.cc  config_parser.cc  config_statement.cc
src/utils/: config_parser.cc  reply.cc  request_parser.cc
tests/: config_parser_test.cc  integration_test.conf  integration_test.sh  server_test.cc
tests/configs/: empty_block_config  multiple_tokens_config  simple_port_config
tests/http/: header_test.cc  mime_types_test.cc  response_test.cc
tests/http/request/: request_parser_test.cc  request_test.cc
tests/http/request_handler/: echo_request_handler_test.cc  not_found_request_handler_test.cc  request_handler_factory_test.cc  request_handler_factory_test.conf  static_request_handler_test.cc  status_request_handler_test.cc
tests/http/request_handler/public/: hello_world.html  home.html
tests/http/server/: echo_request_handler_test.cc  expected_response_correct_rq  expected_response_incorrect_rq  expected_response_post_tst  header_test.cc  integration_test.sh  mime_types_test.cc  reply_test.cc  request_handler_factory_test.cc  request_handler_test.cc  request_parser_test.cc  request_test.cc  response_test.cc  server_test.cc  session_test.cc  static_request_handler_test.cc
tests/http/server/configs/: integration_test_config  request_handler_factory_test.conf  request_handler_factory_test_config
tests/http/server/request_handler/: echo_request_handler_test.cc  request_handler_factory_test.cc  request_handler_test.cc  static_request_handler_test.cc
tests/http/session/: session_test.cc
tests/logging/: log_test.cc  logging_test.cc
tests/nginx/: config_parser_test.cc  config_statement_test.cc  config_test.cc
tests/nginx/configs/: comment.conf  consecutive_closing_brackets.conf  multiple_port.conf  nested_block.conf  nested_port.conf  nginx_config  no_semicolon_config  no_token.conf  unmatched_brackets_config
tests/public/: hello#world.html  hello+world.html  index.html  text.txt
